--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1>Mike's Design Inspiration</h1>
 
 	<a class="btn" href="http://abduzeedo.com/"><i class="icon-abduzeedo-logo">Abduzeedo Logo</i>
-	<a class="btn" href="http://lovelypackage.com/"><i class="icon-abduzeedo-logo">Lovely Package</i>
-	<a class="btn" href="https://www.pinterest.com/"><i class="icon-abduzeedo-logo">Pintrest</i>
+	<a class="btn" href="http://lovelypackage.com/"><i class="icon-lovely-package-logo">Lovely Package</i>
+	<a class="btn" href="https://www.pinterest.com/"><i class="icon-pintrest-logo">Pintrest</i>
 
 </body>
