--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 	<h1>Mike's Design Inspiration</h1>
 
-	<a class="btn" href="http://abduzeedo.com/"><i class="icon-abduzeedo-logo">Abduzeedo Logo</i>
-	<a class="btn" href="http://lovelypackage.com/"><i class="icon-lovely-package-logo">Lovely Package</i>
-	<a class="btn" href="https://www.pinterest.com/"><i class="icon-pintrest-logo">Pintrest</i>
+	<div class="spacer">
+		<a class="btn" href="http://abduzeedo.com/"><i class="icon-abduzeedo-logo"></i>
+		<a class="btn" href="http://lovelypackage.com/"><i class="icon-lovely-package-logo"></i>
+		<a class="btn" href="https://www.pinterest.com/"><i class="icon-pintrest-logo"></i>
+	</div>
 
 </body>
