--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-	<h1>Mike's Design Inspiration</h1>
+	<h1>Find Your Inspiration</h1>
 
-	<div class="spacer">
+	<div>
 		<a class="btn" href="http://abduzeedo.com/"><i class="icon-abduzeedo-logo"></i>
 		<a class="btn" href="http://lovelypackage.com/"><i class="icon-lovely-package-logo"></i>
 		<a class="btn" href="https://www.pinterest.com/"><i class="icon-pintrest-logo"></i>
