--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="https://file.myfontastic.com/YQSDrLrvghcShGqBXxzNYA/icons.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
